--- a/mitrailifeapps/src/main/res/layout/fragment_ulasan.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_ulasan.xml
@@ -100,7 +100,7 @@
             android:fontFamily="@font/roboto_medium"
             android:textColor="@color/fontulasan"
             android:textSize="12sp"
-            tools:text="4.7 dari 5 (3 Ulasan)" />
+            tools:text="4.7 dari 5 (3 ulasan)" />
 
         <View
             android:id="@+id/viewFirst2"
@@ -111,7 +111,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear_edit_password" />
-
 
     </LinearLayout>
 
@@ -130,16 +129,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:visibility="gone"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linear_rating">
 
         <ImageView
-            android:layout_width="280dp"
-            android:layout_height="275dp"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
             android:background="@drawable/ic_ulasan_kosong" />
 
         <TextView
@@ -148,7 +146,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/roboto_medium"
-            android:text="Belum ada Penilaian"
+            android:text="@string/belum_ada_penilaian"
             android:textColor="@color/font_default"
             android:textSize="18sp" />
 
@@ -160,7 +158,7 @@
             android:layout_marginTop="12dp"
             android:fontFamily="@font/roboto"
             android:gravity="center"
-            android:text="Silahkan pesan dan nilai kemampuan mitra anda."
+            android:text="@string/toko_anda_belum_mempunyai_penilaian_dan_ulasan_dari_pelanggan"
             android:textColor="@color/font_default"
             android:textSize="14sp" />
 
