--- a/mitrailifeapps/src/main/res/layout/fragment_chat_room.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_chat_room.xml
@@ -36,9 +36,9 @@
                 <ImageView
                     android:id="@+id/ic_back"
                     android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/ic_baseline_arrow_back_24" />
+                    android:layout_height="26dp"
+                    android:background="@drawable/ic_back"
+                    android:layout_gravity="center_vertical"/>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/img_profile_mitra"
