--- a/mitrailifeapps/src/main/res/layout/fragment_list_chat_room.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_list_chat_room.xml
@@ -24,9 +24,9 @@
             <ImageView
                 android:id="@+id/ic_back"
                 android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_height="26dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/ic_baseline_arrow_back_24"
+                android:background="@drawable/ic_back"
                 app:layout_constraintBottom_toBottomOf="@+id/textView29"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView29" />
