--- a/mitrailifeapps/src/main/res/layout/fragment_setting.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_setting.xml
@@ -80,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.5"
+            android:layout_marginStart="3dp"
             tools:text="25 November 2020"
             android:fontFamily="@font/roboto"
             android:textColor="@color/font_default"
