--- a/mitrailifeapps/src/main/res/layout/item_rv_dialog_kelola_toko.xml
+++ b/mitrailifeapps/src/main/res/layout/item_rv_dialog_kelola_toko.xml
@@ -22,8 +22,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            style="@style/Responsive16dp"
             android:paddingVertical="4dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
