--- a/app/src/main/res/layout/item_rv_pilih_mitra.xml
+++ b/app/src/main/res/layout/item_rv_pilih_mitra.xml
@@ -82,7 +82,7 @@
                                     android:maxLines="1"
                                     android:text="PT Sukses Jaya"
                                     android:textColor="@color/font_default"
-                                    android:textSize="14sp"
+                                    android:textSize="16sp"
                                     app:layout_constraintStart_toStartOf="@+id/textView3"
                                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,6 +90,7 @@
                                     android:id="@+id/ic_verified"
                                     android:layout_width="16dp"
                                     android:layout_height="16dp"
+                                    android:visibility="gone"
                                     android:layout_marginStart="4dp"
                                     android:background="@drawable/ic_baseline_check_circle_24" />
 
@@ -156,11 +157,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lineardetail" />
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </RadioGroup>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
