filter + mitra done, kurang chat+notif

--- a/mitrailifeapps/src/main/res/layout/fragment_create_shop_one.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_create_shop_one.xml
@@ -114,7 +114,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_nama_toko"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
                     android:inputType="text"
                     android:paddingStart="24dp"
@@ -162,7 +162,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_facebook"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
                     android:inputType="text"
                     android:paddingStart="24dp"
@@ -198,7 +198,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_instagram"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
                     android:inputType="text"
                     android:paddingStart="24dp"
