--- a/mitrailifeapps/src/main/res/layout/fragment_create_shop_two.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_create_shop_two.xml
@@ -96,7 +96,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_kategori_jasa"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
+                    android:layout_height="wrap_content"
                     android:focusable="false"
                     android:fontFamily="@font/roboto"
                     android:inputType="text"
@@ -202,7 +202,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_harga_jasa"
                         android:layout_width="match_parent"
-                        android:layout_height="52dp"
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
                         android:inputType="number"
                         android:maxLength="25"
@@ -248,7 +248,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
-                        android:inputType="text"
+                        android:inputType="textMultiLine"
                         android:maxLength="100"
                         android:paddingStart="24dp"
                         android:paddingEnd="24dp"
@@ -284,7 +284,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
-                        android:inputType="text"
+                        android:inputType="textMultiLine"
                         android:maxLength="100"
                         android:paddingStart="24dp"
                         android:paddingEnd="24dp"
@@ -320,7 +320,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
-                        android:inputType="text"
+                        android:inputType="textMultiLine"
                         android:maxLength="100"
                         android:paddingStart="24dp"
                         android:paddingEnd="24dp"
