--- a/mitrailifeapps/src/main/res/layout/fragment_home.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,16 @@
     android:background="@color/colorBackground"
     tools:context=".ui.dashboard.home.HomeFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
     <LinearLayout
         android:id="@+id/cardView"
         android:layout_width="match_parent"
