--- a/mitrailifeapps/src/main/res/layout/fragment_profile.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_profile.xml
@@ -131,7 +131,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -183,7 +182,7 @@
 
                             <TextView
                                 android:id="@+id/tv_nama_toko"
-                                android:layout_width="0dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:ellipsize="end"
                                 android:fontFamily="@font/roboto_bold"
@@ -191,7 +190,6 @@
                                 android:paddingEnd="32dp"
                                 android:textColor="@color/font_default"
                                 android:textSize="20sp"
-                                app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="Tukang Bersih" />
@@ -301,7 +299,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/roboto"
+                        android:fontFamily="@font/roboto_medium"
                         android:gravity="end"
                         android:textColor="@color/font_default"
                         android:textSize="16sp"
