--- a/mitrailifeapps/src/main/res/layout/fragment_register_two.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_register_two.xml
@@ -91,7 +91,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_provinsi"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
                 android:maxLength="50"
@@ -123,7 +123,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_kota_kab"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
                 android:maxLength="50"
@@ -155,7 +155,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_kecamatan"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
                 android:maxLength="50"
@@ -187,7 +187,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_kodepos"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
                 android:inputType="number"
                 android:maxLength="5"
@@ -221,8 +221,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
-                android:inputType="text"
-                android:maxLength="75"
+                android:inputType="textMultiLine"
+                android:maxLength="100"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
                 android:textColor="@color/font_default"
