--- a/mitrailifeapps/src/main/res/layout/fragment_ulasan.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_ulasan.xml
@@ -129,6 +129,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:visibility="gone"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
