--- a/mitrailifeapps/src/main/res/layout/fragment_ulasan.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_ulasan.xml
@@ -57,6 +57,16 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearBar" />
+
     <LinearLayout
         android:id="@+id/linear_rating"
         android:layout_width="match_parent"
