--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.dashboard.home.chat.ChatActivity"
+    tools:context=".ui.dashboard.home.chats.ChatsActivity"
     tools:ignore="MissingDefaultResource">
 
 </FrameLayout>
