--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <include
-                        layout="@layout/item_chat"
+                        layout="@layout/item_ic_chat"
                         android:id="@+id/chat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
