--- a/app/src/main/res/layout/fragment_list_chat_messages.xml
+++ b/app/src/main/res/layout/fragment_list_chat_messages.xml
@@ -153,7 +153,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout23">
 
         <LinearLayout
-            android:id="@+id/btn_tawar"
+            android:id="@+id/btn_tawar_mitra"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
