--- a/app/src/main/res/layout/fragment_list_chat_messages.xml
+++ b/app/src/main/res/layout/fragment_list_chat_messages.xml
@@ -83,7 +83,8 @@
                     android:id="@+id/ic_verified"
                     android:layout_width="14dp"
                     android:layout_height="14dp"
-                    android:layout_marginTop="6dp"
+                    android:visibility="gone"
+                    android:layout_gravity="center"
                     android:layout_marginStart="4dp"
                     android:background="@drawable/ic_baseline_check_circle_24" />
 
