--- a/app/src/main/res/layout/fragment_list_chat_room.xml
+++ b/app/src/main/res/layout/fragment_list_chat_room.xml
@@ -74,33 +74,15 @@
 
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_room_chat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_title">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="56dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_room_chat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/item_rv_chat_room" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
-
+        app:layout_constraintTop_toBottomOf="@+id/linear_title"
+        tools:listitem="@layout/item_rv_chat_room" />
 
     <LinearLayout
         android:id="@+id/linear_empty_chat"
