--- a/mitrailifeapps/src/main/res/layout/activity_chats.xml
+++ b/mitrailifeapps/src/main/res/layout/activity_chats.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/host_chat_activity"
+    android:id="@+id/host_fragment_activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.dashboard.home.chat.ChatActivity"
+    tools:context=".ui.dashboard.home.chats.ChatsActivity"
     tools:ignore="MissingDefaultResource">
 
 </FrameLayout>
