--- a/mitrailifeapps/src/main/res/layout/fragment_notifications.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_notifications.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground"
-    tools:context=".ui.dashboard.chats.listchatroom.ListChatRoomFragment"
-    tools:ignore="MissingDefaultResource">
+    tools:context=".ui.dashboard.notifications.NotificationsFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -47,37 +46,11 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto_bold"
-                android:text="@string/chat"
+                android:text="@string/notification"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="22sp"
                 app:layout_constraintStart_toEndOf="@+id/ic_back"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView30"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="Belum Dibaca"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView29"
-                app:layout_constraintEnd_toStartOf="@+id/tv_belum_dibaca"
-                app:layout_constraintTop_toTopOf="@+id/textView29" />
-
-            <TextView
-                android:id="@+id/tv_belum_dibaca"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/roboto_bold"
-                tools:text="( 1 )"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView30"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textView30" />
 
             <View
                 android:id="@+id/viewFirst"
@@ -93,34 +66,34 @@
 
     </LinearLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_room_chat"
+        android:id="@+id/rvNotification"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_title"
-        tools:listitem="@layout/item_rv_list_chat" />
+        tools:listitem="@layout/item_rv_notification" />
 
 
     <LinearLayout
-        android:id="@+id/linear_empty_chat"
+        android:id="@+id/linear_empty_notifikasi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
         android:gravity="center"
-        android:visibility="gone"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_title">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="280dp"
             android:layout_height="275dp"
-            android:background="@drawable/img_empty_chat" />
+            android:background="@drawable/ic_ilustrasi_no_notifikasi" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -128,12 +101,12 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/roboto_medium"
-            android:text="Belum ada Chat"
+            android:text="Belum ada Notifikasi"
             android:textColor="@color/font_default"
             android:textSize="20sp" />
 
         <TextView
-            style="@style/Responsive16dp"
+            style="@style/Responsive24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
