--- a/mitrailifeapps/src/main/res/layout/fragment_transaction.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_transaction.xml
@@ -34,78 +34,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
-            <LinearLayout
-                android:id="@+id/linear_message"
+            <include
+                android:id="@+id/chat"
+                layout="@layout/item_ic_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/linear_notification"
-                app:layout_constraintEnd_toStartOf="@+id/linear_notification"
-                app:layout_constraintTop_toTopOf="@+id/linear_notification">
+                android:layout_marginEnd="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/notification"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/ic_message"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:background="@drawable/ic_chat_blue_24"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/imgBadgeChat"
-                        android:layout_width="14dp"
-                        android:layout_height="14dp"
-                        android:background="@drawable/bg_badge_notification"
-                        app:layout_constraintHorizontal_bias="1.2"
-                        android:gravity="center"
-                        app:layout_constraintEnd_toEndOf="@+id/ic_message"
-                        app:layout_constraintStart_toStartOf="@+id/ic_message"
-                        app:layout_constraintTop_toTopOf="@+id/ic_message" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linear_notification"
+            <include
+                android:id="@+id/notification"
+                layout="@layout/item_notification"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/ic_notification"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:background="@drawable/ic_notifications_blue_24"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/imgBadgeNotification"
-                        android:layout_width="14dp"
-                        android:layout_height="14dp"
-                        android:background="@drawable/bg_badge_notification"
-                        app:layout_constraintHorizontal_bias="1.2"
-                        android:gravity="center"
-                        app:layout_constraintEnd_toEndOf="@+id/ic_notification"
-                        app:layout_constraintStart_toStartOf="@+id/ic_notification"
-                        app:layout_constraintTop_toTopOf="@+id/ic_notification" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </LinearLayout>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
                 android:id="@+id/viewFirst"
