mitra btn tolak&terima tawaran done, user visibility btn done

--- a/mitrailifeapps/src/main/res/layout/fragment_notifications.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_notifications.xml
@@ -81,14 +81,13 @@
         android:id="@+id/linear_empty_notifikasi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linear_title">
 
         <ImageView
             android:layout_width="280dp"
