--- a/app/src/main/res/layout/fragment_list_chat_messages.xml
+++ b/app/src/main/res/layout/fragment_list_chat_messages.xml
@@ -148,7 +148,7 @@
         android:background="@color/colorBackground"
         android:orientation="horizontal"
         android:paddingVertical="12dp"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout23">
@@ -203,7 +203,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_bg_tawar_pesan" />
-
 
     <LinearLayout
         android:id="@+id/layout_chatbox"
