--- a/mitrailifeapps/src/main/res/layout/fragment_profile.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_profile.xml
@@ -78,6 +78,7 @@
         android:id="@+id/linear_toko"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="gone"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -445,7 +446,7 @@
                 android:id="@+id/tv_info_total_pesanan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="24dp"
                 android:alpha="0.5"
                 android:fontFamily="@font/roboto"
                 android:text="@string/total_pesanan_sukses"
