--- a/mitrailifeapps/src/main/res/layout/fragment_home.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_home.xml
@@ -70,6 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
+                android:visibility="gone"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
